--- a/src/themes/eui-amsterdam/overrides/_index.scss
+++ b/src/themes/eui-amsterdam/overrides/_index.scss
@@ -1,6 +1,7 @@
 @import 'button';
 @import 'button_empty';
 @import 'button_group';
+@import 'header';
 @import 'image';
 @import 'modal';
 @import 'overlay_mask';
