--- a/src/components/header/_index.scss
+++ b/src/components/header/_index.scss
@@ -1,5 +1,7 @@
 // Components
 @import 'variables';
+@import 'mixins';
+
 @import 'header';
 @import 'header_profile';
 @import 'header_links/index';
