--- a/src/components/header/header_links/_header_links.scss
+++ b/src/components/header/header_links/_header_links.scss
@@ -4,20 +4,18 @@
   display: flex;
   justify-content: space-between;
   position: relative;
-  flex-grow: 1;
 }
 
 .euiHeaderLinks__list {
   white-space: nowrap;
   overflow: hidden;
+  display: flex;
+  align-items: center;
 }
 
 .euiHeaderLinks__mobile {
   // sass-lint:disable-block no-important
   display: none !important; // override popover inline-block
-  position: absolute !important; // override popover relative
-  right: 0;
-
 }
 
 @include euiBreakpoint('m', 'l', 'xl') {
