--- a/src/components/nav_drawer/_variables.scss
+++ b/src/components/nav_drawer/_variables.scss
@@ -3,11 +3,11 @@ $euiNavDrawerBackgroundColor: $euiHeaderBackgroundColor;
 
 // Drawer variables
 $euiNavDrawerWidthExpanded: 240px;
-$euiNavDrawerWidthCollapsed: $euiHeaderChildSize;
+$euiNavDrawerWidthCollapsed: $euiHeaderHeight;
 $euiNavDrawerSideShadow: 2px 0 2px -1px rgba($euiShadowColor, .3);
 
 // Layout variables
-$euiNavDrawerTopPosition: $euiHeaderChildSize + 1px;
+$euiNavDrawerTopPosition: $euiHeaderHeight + 1px;
 
 // Animation variables
 $euiNavDrawerExpandingDelay: $euiAnimSpeedNormal;
