--- a/src/components/header/_header_logo.scss
+++ b/src/components/header/_header_logo.scss
@@ -8,7 +8,8 @@
   line-height: $euiHeaderChildSize;
   min-width: $euiHeaderChildSize + 1px;
   padding: 0 ($euiSizeM + 1px) 0 $euiSizeM;
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
   vertical-align: middle;
   white-space: nowrap;
 
@@ -20,12 +21,6 @@
   &:hover {
     text-decoration: none;
   }
-}
-
-.euiHeaderLogo__icon {
-  opacity: 1;
-  position: relative;
-  top: -2px;
 }
 
 .euiHeaderLogo__text {
