a11y rework of [EuiPagination] and friends (#3294)

--- a/src/components/pagination/_pagination.scss
+++ b/src/components/pagination/_pagination.scss
@@ -15,3 +15,13 @@
     }
   }
 }
+
+.euiPagination__list {
+  display: flex;
+}
+
+@include euiBreakpoint('xs', 's') {
+  .euiPagination__list {
+    display: none;
+  }
+}
