[EuiHeader] Stacked example (#3538)
* Added stacked header example
**Break**: EuiHeader now requires consumer to use mixin to apply padding to account for fixed position
* Adding header updates to test flyouts
* Fix styles for dark theme
  - Darker in actual dark theme
* Fix addition/removal of body classes when there are mulitple fixed headers
* Fixing shadows on flyouts.
* Change Fixed Header example and fixed separation of flyout and header

--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: space-between;
   background: $euiHeaderBackgroundColor;
-  border-bottom: $euiBorderThin;
+  border-bottom: 1px solid $euiHeaderBorderColor;
 
   &--fixed {
     position: fixed;
@@ -19,10 +19,6 @@
   }
 }
 
-.euiBody--headerIsFixed {
-  padding-top: $euiHeaderHeightCompensation;
-}
-
 .euiBody--collapsibleNavIsOpen,
 .euiBody--hasFlyout {
   .euiHeader--fixed {
@@ -30,9 +26,15 @@
   }
 }
 
+.euiHeader--fixed + .euiHeader--fixed {
+  top: $euiHeaderHeightCompensation;
+}
+
 .euiHeader--dark {
-  // Only force reverse theme if the theme is light
   @if (lightness($euiTextColor) < 50) {
-    @include euiHeaderDarkTheme;
+    @include euiHeaderDarkTheme($backgroundColor: shade($euiColorDarkestShade, 28%));
+  } @else {
+    // Makes forced "dark" theme darker than the typical dark them to separate them visually
+    @include euiHeaderDarkTheme($backgroundColor: shade($euiColorLightestShade, 50%));
   }
 }
