--- a/src/components/header/_variables.scss
+++ b/src/components/header/_variables.scss
@@ -1,6 +1,7 @@
 // Note - these are also used by the EuiNavDrawer (/nav_drawer) component
 // Themable colors
 $euiHeaderBackgroundColor: $euiColorEmptyShade !default;
+$euiHeaderBorderColor: $euiBorderColor !default;
 $euiHeaderBreadcrumbColor: $euiColorDarkestShade !default;
 
 // Layout vars
