--- a/src/themes/eui-amsterdam/overrides/_header.scss
+++ b/src/themes/eui-amsterdam/overrides/_header.scss
@@ -1,6 +1,5 @@
 .euiHeader {
   height: $euiHeaderHeight;
-  border-bottom: none;
   padding-left: $euiSizeS;
   padding-right: $euiSizeS;
 }
@@ -11,6 +10,10 @@
 }
 
 .euiHeaderLogo {
+  @include euiBreakpoint('xs') {
+    padding: 0 $euiSizeXS;
+  }
+
   padding-left: $euiSizeS;
   padding-right: $euiSizeS;
   min-width: $euiHeaderChildSize;
@@ -22,4 +25,8 @@
 
 .euiHeaderBreadcrumbs {
   margin-left: $euiSizeS;
+}
+
+.euiHeader--default + .euiHeader--default {
+  border-top: $euiBorderThin;
 }
