Adding an overflow to round card images. (#3556)
* Adding an overflow to round card images.

* CL

* Update CHANGELOG.md

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -148,6 +148,7 @@
     // match border radius, minus 1px because it's inside a border
     border-top-left-radius: $euiBorderRadius - 1px;
     border-top-right-radius: $euiBorderRadius - 1px;
+    overflow: hidden;
 
     img {
       width: 100%;
