Added EuiTextDiff component (#3288)
* Added EuiTextDiff component

* fixed sass-linting

* removed unwanted exports

* improved Examples, exported all data from component

* used useMemo

* exported props,used for loop

* allow user to pass components

* yarn.lock updated and deletion component used for example

* used id as key, useMemos combined

* removed disableTimeout prop

* used useMemo for renderedHtml

* Changed slider steps to display result

* tranformed to hook

* removed padding , fontSize controll from euiText

* removed unnecessay props

* used EuiTextDiffProps and removed Funcion def

* used ElementType

* Used diff inside useMemo

* populated text-diff module defination

* Update src-docs/src/views/code/code_example.js

Co-authored-by: Chandler Prall <chandler.prall@gmail.com>

* used _colors and eui_colors_dark.scss for text diff, changed slider props

* valueAppend used

* more detailed timeout description

* insertions/dels are recalculated, improved custom components desc

* console.log removed

* created separate section for text diff

* Update src-docs/src/views/text_diff/text_diff_example.js

Co-authored-by: Chandler Prall <chandler.prall@gmail.com>

* setDel , setIns to zero on value change

* Update src-docs/src/views/text_diff/text_diff_timeout.js

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

* Update src-docs/src/views/text_diff/text_diff_example.js

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

* Update src-docs/src/views/text_diff/text_diff_example.js

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

* Update src-docs/src/views/text_diff/text_diff_custom_components.js

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

* Update src/components/code/text_diff.tsx

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

* Update src-docs/src/views/te

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -63,6 +63,7 @@
 @import 'suggest/index';
 @import 'table/index';
 @import 'tabs/index';
+@import 'text_diff/index';
 @import 'title/index';
 @import 'toast/index';
 @import 'token/index';
