[Amsterdam] Use rounded corners and bolder titles for EuiCallout (#3557)
* round corners + bold titles

* no rounded corners on Flyout banner

* update changelog

* semi bold titles

* use medium font weight instead

* update changelog

* Apply suggestions from code review

* Fix my bad edit of CL

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

--- a/src/themes/eui-amsterdam/overrides/_index.scss
+++ b/src/themes/eui-amsterdam/overrides/_index.scss
@@ -1,6 +1,7 @@
 @import 'button';
 @import 'button_empty';
 @import 'button_group';
+@import 'call_out';
 @import 'flyout';
 @import 'header';
 @import 'image';
