--- a/src/components/breadcrumbs/_variables.scss
+++ b/src/components/breadcrumbs/_variables.scss
@@ -1,2 +1,2 @@
-$euiBreadcrumbSpacing: $euiSizeS;
-$euiBreadcrumbTruncateWidth: $euiSize * 10;
+$euiBreadcrumbSpacing: $euiSizeS !default;
+$euiBreadcrumbTruncateWidth: $euiSize * 10 !default;
