--- a/src/components/header/header_breadcrumbs/_header_breadcrumbs.scss
+++ b/src/components/header/header_breadcrumbs/_header_breadcrumbs.scss
@@ -1,8 +1,8 @@
 // Breadcrumb navigation included in the header.
 
 .euiHeaderBreadcrumbs {
-  margin-left: $euiSizeS;
-  margin-right: $euiSizeS;
+  margin-left: $euiSizeM;
+  margin-right: $euiSizeM;
   display: flex;
   align-items: center;
   flex-grow: 1;
