--- a/src/themes/eui-amsterdam/overrides/_header.scss
+++ b/src/themes/eui-amsterdam/overrides/_header.scss
@@ -1,3 +1,5 @@
+@import '../global_styling/mixins/button';
+
 .euiHeader {
   height: $euiHeaderHeight;
   padding-left: $euiSizeS;
@@ -23,10 +25,65 @@
   @include euiTitle('xxs');
 }
 
-.euiHeaderBreadcrumbs {
-  margin-left: $euiSizeS;
-}
-
 .euiHeader--default + .euiHeader--default {
   border-top: $euiBorderThin;
 }
+
+// Breadcrumbs
+
+.euiHeaderBreadcrumbs {
+  @include euiFontSizeXS;
+  font-weight: $euiFontWeightMedium;
+  margin-left: $euiSizeS;
+  margin-right: $euiSizeS;
+
+  // No separators
+  .euiBreadcrumbSeparator {
+    display: none !important; // sass-lint:disable-line no-important
+  }
+
+  // Only the header breadcrumbs get the new Amsterdam style so that there can
+  // still be default text only breadcrumbs for places like EuiControlBar
+  .euiBreadcrumb {
+    @include euiButtonDefaultStyle($euiTextColor);
+    padding: $euiSizeXS $euiSizeM $euiSizeXS $euiSize;
+    clip-path: polygon(0 0, calc(100% - #{$euiSizeS}) 0, 100% 50%, calc(100% - #{$euiSizeS}) 100%, 0 100%, $euiSizeS 50%);
+
+    // If it's a link the easiest way to detect is via our .euiLink class since it can accept either href or onClick
+    // Also helps to add specificity for overrdiing hover state
+    &.euiBreadcrumb--collapsed,
+    &.euiLink {
+      @include euiButtonDefaultStyle($euiColorPrimary);
+
+      &:hover,
+      &:focus {
+        color: $euiColorPrimary;
+      }
+    }
+
+    &.euiBreadcrumb--collapsed .euiLink {
+      &,
+      &:hover,
+      &:focus {
+        color: $euiColorPrimary;
+      }
+    }
+
+    &:not(.euiBreadcrumb--last) {
+      margin-right: -$euiSizeXS;
+    }
+
+    &:first-child {
+      padding-left: $euiSizeM;
+      border-radius: $euiSizeS 0 0 $euiSizeS;
+      clip-path: polygon(0 0, calc(100% - #{$euiSizeS}) 0, 100% 50%, calc(100% - #{$euiSizeS}) 100%, 0 100%);
+    }
+  }
+
+  .euiBreadcrumb--last {
+    border-radius: 0 #{$euiSizeS} #{$euiSizeS} 0;
+    padding-right: $euiSizeM;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%, #{$euiSizeS} 50%);
+  }
+}
+
