Compute EuiComboBox's listbox zIndex (#3551)
* Updated EuiComboBox to match its combobox zIndex when rendering the listbox

* changelog

* Removed , now programmatically determining combobox options list zindex

--- a/src/components/combo_box/combo_box_options_list/_combo_box_options_list.scss
+++ b/src/components/combo_box/combo_box_options_list/_combo_box_options_list.scss
@@ -7,8 +7,8 @@
  * 4. Using specificity to override panel shadow
  */
 .euiComboBoxOptionsList {
+  // z-index is programmatically added to the options list by JavaScript
   @include euiFormControlSize(auto, $includeAlternates: true); /* 3 */
-  z-index: $euiZComboBox;
   position: absolute; /* 2 */
   top: 0; /* 2 */
 
