[EuiHeader] Fix SASS globals & docs (#3592)

--- a/src/global_styling/mixins/_header.scss
+++ b/src/global_styling/mixins/_header.scss
@@ -1,3 +1,5 @@
+@import '../variables/header';
+
 @mixin euiHeaderAffordForFixed($headerHeight: $euiHeaderHeightCompensation) {
   // The `&` allows for grouping inside another specific body class.
   // When not applied inside of another selector, it simply renders with the single class
