[EuiFilterButton] Fix Amsterdam style (#3591)
Fixes #3590

--- a/src/themes/eui-amsterdam/overrides/_index.scss
+++ b/src/themes/eui-amsterdam/overrides/_index.scss
@@ -2,6 +2,7 @@
 @import 'button_empty';
 @import 'button_group';
 @import 'call_out';
+@import 'filter_group';
 @import 'flyout';
 @import 'header';
 @import 'image';
