--- a/src/components/toast/_global_toast_list.scss
+++ b/src/components/toast/_global_toast_list.scss
@@ -1,31 +1,49 @@
 /**
  * 1. Allow list to expand as items are added, but cap it at the screen height.
- * 2. Only show the scroll on hover. Generally, scrolling is bad for toasts.
- * 3. Allow some padding if a scroll shows up.
+ * 2. Allow some padding for shadow
  */
 .euiGlobalToastList {
   @include euiScrollBar;
-
   display: flex;
   flex-direction: column;
   align-items: stretch;
   position: fixed;
   z-index: $euiZToastList;
   bottom: 0;
-  right: 0;
-  width: $euiToastWidth + $euiSize + $euiSizeXL; /* 3 */
-  padding-right: $euiSize;
-  padding-left: $euiSizeXL;
+  width: $euiToastWidth + ($euiSize * 5); /* 2 */
   max-height: 100vh; /* 1 */
+  overflow-y: auto;
 
-  &:hover {
-    overflow-y: auto; /* 2 */
+  // Hide the scrollbar entirely
+  // sass-lint:disable-block no-misspelled-properties
+  scrollbar-width: none;
+
+  // sass-lint:disable-block no-vendor-prefixes
+  &::-webkit-scrollbar {
+    width: 0;
+    height: 0;
   }
+
+  // The top and bottom padding give heighto to the list creating a dead-zone effect
+  // when there's no toasts in the list, meaning you can't click anything beneath it.
+  // Only add the padding if there's content.
+  &:not(:empty) {
+    padding: $euiSize;
+  }
+}
+
+.euiGlobalToastList--right:not(:empty) {
+  right: 0;
+  padding-left: $euiSize * 4; /* 2 */
+}
+
+.euiGlobalToastList--left:not(:empty) {
+  left: 0;
+  padding-right: $euiSize * 4; /* 2 */
 }
 
 .euiGlobalToastListItem {
   margin-bottom: $euiSize;
-  margin-right: $euiSize;
   animation: $euiAnimSpeedNormal euiShowToast $euiAnimSlightResistance;
   opacity: 1;
 
@@ -35,6 +53,10 @@
    */
   &:first-child {
     margin-top: auto; /* 1 */
+  }
+
+  &:last-child {
+    margin-bottom: 0;
   }
 
   &.euiGlobalToastListItem-isDismissed {
@@ -59,9 +81,10 @@
   /**
    * 1. Mobile we make these 100%. Matching change happens on the item as well.
    */
-  .euiGlobalToastList {
+  .euiGlobalToastList:not(:empty) {
     left: 0;
     padding-left: $euiSize;
+    padding-right: $euiSize;
     width: 100%; /* 1 */
   }
 }
