--- a/src/components/facet/_facet_group.scss
+++ b/src/components/facet/_facet_group.scss
@@ -1,9 +1,24 @@
-.euiFacetGroup--horizontal {
-  .euiFacetButton {
-    height: $euiButtonHeightSmall;
+@each $gutterName, $gutterSize in $euiFacetGutterSizes {
+  .euiFacetGroup--#{$gutterName} {
+    .euiFacetButton {
+      // Split the margin between top and bottom
+      margin-top: $gutterSize / 2;
+      margin-bottom: $gutterSize / 2;
+    }
 
-    &:not(:last-of-type) {
-      margin-right: $euiSizeL;
+    &.euiFacetGroup--horizontal {
+      // There needs to be an additional distance between horizontal buttons to ensure
+      // the number notification is closer in proximity to the text it belongs to rather than the button
+      $gutterAdjustment: $euiSizeM + $gutterSize;
+
+      // Collapse margin on the right side of the group to allow it to extend the full width
+      margin-right: -#{$gutterAdjustment};
+
+      .euiFacetButton {
+        margin-right: $gutterAdjustment;
+        // Adjust the max-width so it fits within the alloted margin
+        max-width: calc(100% - #{$gutterAdjustment});
+      }
     }
   }
 }
