[EuiSkipLink] Fix TS types and Safari click issue (#3665)

--- a/src/components/accessibility/_screen_reader.scss
+++ b/src/components/accessibility/_screen_reader.scss
@@ -1,4 +1,5 @@
+// The `:active` selector is necessary for Safari which removes `:focus` when a button is pressed
 .euiScreenReaderOnly,
-.euiScreenReaderOnly--showOnFocus:not(:focus) {
+.euiScreenReaderOnly--showOnFocus:not(:focus):not(:active) {
   @include euiScreenReaderOnly;
 }
