(Trying to) Fix z-indexes with header and flyouts & adding more EuiHeader docs (#3655)
* [EuiOverlayMask] Added `headerAdjacent` prop for altering z-index based on EuiHeader

* [EuiFlyout] Adjusts mask for header and add `maskProps`

- By default EuiFlyout’s mask will always display below the header, but this can be adjusted by with `maskProps`

* Fix demo page setup script with folder location

* [EuiCollapsibleNav] Applying `headerAdjacent="below”` to mask and adding `maskProps` to allow customization

* [Docs] Fixing header examples (esp Alerts)

* Tweak to Amsterdam EuiHeaderBreadcrumb sizing

* Fix demo page setup script with folder location (pt 2)

* [EuiBreadcrumbs] Fix for allowing `onClick`

And font-weight fix for amsterdam header breadcrumbs

* [SASS] Fix flyout vs collapsible nav clip-path

* [EuiBreadcrumbs] Fix for allowing `onClick` (SNAPS)

* [Docs] Elastic Header Pattern (as TSX)

* Convert example to JS and optimize for codesandbox

* [EuiBadge] Allow any valid chroma.js color string

* [EuiHeaderLinks] Fix margins for any children

* Cleanup

* Update src-docs/src/views/header/header_example.js

Co-authored-by: Greg Thompson <thompson.glowe@gmail.com>

* Update src-docs/src/views/overlay_mask/overlay_mask_example.js

Co-authored-by: Greg Thompson <thompson.glowe@gmail.com>

* Change `headerAdjacent` to `headerZindexLocation`

* cl

* cl

Co-authored-by: Greg Thompson <thompson.glowe@gmail.com>

--- a/src-docs/src/components/guide_components.scss
+++ b/src-docs/src/components/guide_components.scss
@@ -25,6 +25,12 @@ $guideZLevelHighest: $euiZLevel9 + 1000;
   .guideSideNav {
     top: $euiHeaderHeightCompensation * 2;
   }
+
+  .euiHeader:not(.euiHeader--fixed) {
+    // Force headers below the full screen.
+    // This shouldn't be necessary in consuming applications because headers should always be at the top of the page
+    z-index: 0;
+  }
 }
 
 .guidePage {
