--- a/src/components/flyout/_mixins.scss
+++ b/src/components/flyout/_mixins.scss
@@ -9,9 +9,10 @@
   bottom: 0;
   right: 0;
   height: 100%;
-  z-index: $euiZModal;
+  z-index: $euiZFlyout;
   background: $euiColorEmptyShade;
   display: flex;
   flex-direction: column;
   align-items: stretch;
+  clip-path: polygon(-20% 0, 100% 0, 100% 100%, -20% 100%);
 }
