--- a/src/themes/eui-amsterdam/overrides/_header.scss
+++ b/src/themes/eui-amsterdam/overrides/_header.scss
@@ -32,8 +32,8 @@
 // Breadcrumbs
 
 .euiHeaderBreadcrumbs {
-  @include euiFontSizeXS;
-  font-weight: $euiFontWeightMedium;
+  font-size: $euiFontSizeXS;
+  line-height: $euiSize;
   margin-left: $euiSizeS;
   margin-right: $euiSizeS;
 
@@ -46,7 +46,9 @@
   // still be default text only breadcrumbs for places like EuiControlBar
   .euiBreadcrumb {
     @include euiButtonDefaultStyle($euiTextColor);
-    padding: $euiSizeXS $euiSizeM $euiSizeXS $euiSize;
+    line-height: $euiSize;
+    font-weight: $euiFontWeightMedium;
+    padding: $euiSizeXS $euiSize;
     clip-path: polygon(0 0, calc(100% - #{$euiSizeS}) 0, 100% 50%, calc(100% - #{$euiSizeS}) 100%, 0 100%, $euiSizeS 50%);
 
     // If it's a link the easiest way to detect is via our .euiLink class since it can accept either href or onClick
@@ -75,15 +77,23 @@
 
     &:first-child {
       padding-left: $euiSizeM;
-      border-radius: $euiSizeS 0 0 $euiSizeS;
+      border-radius: $euiBorderRadius 0 0 $euiBorderRadius;
       clip-path: polygon(0 0, calc(100% - #{$euiSizeS}) 0, 100% 50%, calc(100% - #{$euiSizeS}) 100%, 0 100%);
     }
   }
 
   .euiBreadcrumb--last {
-    border-radius: 0 #{$euiSizeS} #{$euiSizeS} 0;
+    border-radius: 0 $euiBorderRadius $euiBorderRadius 0;
     padding-right: $euiSizeM;
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%, #{$euiSizeS} 50%);
+  }
+
+  // In case the item is first AND last, aka only, just make it a fully rounded item
+  .euiBreadcrumb:only-child {
+    clip-path: none;
+    padding-left: $euiSizeM;
+    padding-right: $euiSizeM;
+    border-radius: $euiBorderRadius;
   }
 }
 
