Add paddingSize prop to EuiCard and display example to docs (#3638)
* adding paddingSize to EuiCard and display example

* cl

* add more examples

* pr feedback

* make card with image work when paddingSize is none

* removed margins from loop

* broken test

* sizes ts

* cl again

Co-authored-by: Greg Thompson <thompson.glowe@gmail.com>

--- a/src/components/card/_variables.scss
+++ b/src/components/card/_variables.scss
@@ -16,3 +16,10 @@ $euiCardSelectButtonBackgrounds: (
   danger: tintOrShade($euiColorDanger, 90%, 70%),
   ghost: $euiColorDarkShade,
 );
+
+$euiCardPaddingModifiers: (
+  'paddingNone': 0,
+  'paddingSmall': $euiSizeS,
+  'paddingMedium': $euiSize,
+  'paddingLarge': $euiSizeL
+) !default;
