--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -12,7 +12,6 @@
 .euiCard {
   display: flex;
   flex-direction: column;
-  padding: $euiCardSpacing;
   min-height: 1px; /* 2 */// sass-lint:disable-line mixins-before-declarations
 
   &.euiCard-isDisabled {
@@ -99,11 +98,6 @@
     }
   }
 
-  &.euiCard--isSelectable {
-    position: relative;
-    padding-bottom: $euiCardSpacing + $euiCardBottomNodeHeight;
-  }
-
   &.euiCard-isSelected {
     transition: all $euiAnimSpeedFast $euiAnimSlightResistance;
   }
@@ -111,6 +105,76 @@
 
 // This creates a bunch of sub selectors for the beta badge
 @include euiHasBetaBadge($selector: '.euiCard', $spacing: $euiCardSpacing);
+
+.euiCard--isSelectable {
+  position: relative;
+}
+
+@each $modifier, $paddingAmount in $euiCardPaddingModifiers {
+  .euiCard--#{$modifier} {
+    padding: $paddingAmount;
+
+    &.euiCard--isSelectable {
+      padding-bottom: $paddingAmount + $euiCardBottomNodeHeight;
+    }
+
+    .euiCard__top {
+
+      .euiCard__image {
+        width: calc(100% + (#{$paddingAmount} * 2));
+        left: $paddingAmount * -1;
+        top: $paddingAmount * -1;
+        margin-bottom: $paddingAmount * -1; // ensure the parent is only as tall as the image
+
+        // IF both exist, position the icon centered on top of image
+        + .euiCard__icon {
+          transform: translate(-50%, -75%); // Fallback for IE as it doesn't accept calcs in translates
+          transform: translate(-50%, calc(-50% + #{$paddingAmount * -1})); // sass-lint:disable-line no-duplicate-properties
+        }
+      }
+    }
+
+  }
+}
+
+.euiCard__top {
+  flex-grow: 0; /* 1 */
+  position: relative;
+  min-height: 1px; /* 2 */
+
+  .euiCard__image {
+    position: relative;
+
+    // match border radius, minus 1px because it's inside a border
+    border-top-left-radius: $euiBorderRadius - 1px;
+    border-top-right-radius: $euiBorderRadius - 1px;
+    overflow: hidden;
+
+    img {
+      width: 100%;
+    }
+
+    // IF both exist, position the icon centered on top of image
+    + .euiCard__icon {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+    }
+  }
+
+  .euiCard__icon {
+    margin-top: $euiCardSpacing / 2;
+  }
+}
+
+.euiCard__footer:not(:empty) {
+  flex-grow: 0; /* 1 */
+  margin-top: $euiCardSpacing;
+}
+
+.euiCard--hasChildren .euiCard__description {
+  margin-bottom: $euiCardSpacing;
+}
 
 // Selectable cards don't work well without a border
 .euiCard--plain:not(.euiCard--isSelectable) {
@@ -129,42 +193,6 @@
   }
 }
 
-.euiCard__top {
-  flex-grow: 0; /* 1 */
-  position: relative;
-  min-height: 1px; /* 2 */
-
-  .euiCard__icon {
-    margin-top: $euiCardSpacing / 2;
-  }
-
-  .euiCard__image {
-    position: relative;
-    width: calc(100% + (#{$euiCardSpacing} * 2));
-    left: $euiCardSpacing * -1;
-    top: $euiCardSpacing * -1;
-    margin-bottom: $euiCardSpacing * -1; // ensure the parent is only as tall as the image
-
-    // match border radius, minus 1px because it's inside a border
-    border-top-left-radius: $euiBorderRadius - 1px;
-    border-top-right-radius: $euiBorderRadius - 1px;
-    overflow: hidden;
-
-    img {
-      width: 100%;
-    }
-
-    // IF both exist, position the icon centered on top of image
-    + .euiCard__icon {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -75%); // Fallback for IE as it doesn't accept calcs in translates
-      transform: translate(-50%, calc(-50% + #{$euiCardSpacing * -1})); // sass-lint:disable-line no-duplicate-properties
-    }
-  }
-}
-
 // If an icon or image exists, add some space
 .euiCard__top + .euiCard__content {
   margin-top: $euiCardSpacing;
@@ -172,6 +200,10 @@
 
 .euiCard__content {
   flex-grow: 1; /* 1 */
+
+  .euiCard__description {
+    margin-top: $euiCardSpacing / 2;
+  }
 
   .euiCard__titleAnchor,
   .euiCard__titleButton {
@@ -184,14 +216,6 @@
     }
   }
 
-  .euiCard__description {
-    margin-top: $euiCardSpacing / 2;
-  }
-}
-
-.euiCard__footer:not(:empty) {
-  flex-grow: 0; /* 1 */
-  margin-top: $euiCardSpacing;
 }
 
 .euiCard.euiCard--horizontal {
@@ -217,8 +241,4 @@
     margin-top: 0;
     margin-right: $euiSize;
   }
-}
-
-.euiCard--hasChildren .euiCard__description {
-  margin-bottom: $euiCardSpacing;
 }
