SASS globals helper file (#3691)
* Adding a helper `globals` file with just the invisibles

* Update Consuming wiki

--- a/src/themes/eui-amsterdam/global_styling/variables/_index.scss
+++ b/src/themes/eui-amsterdam/global_styling/variables/_index.scss
@@ -1,3 +1,6 @@
+// Import base theme first, then override
+@import '../../../../global_styling/variables/index';
+
 @import 'buttons';
 @import 'borders';
 @import 'flyout';
