--- a/src/themes/eui-amsterdam/global_styling/mixins/_index.scss
+++ b/src/themes/eui-amsterdam/global_styling/mixins/_index.scss
@@ -1,3 +1,6 @@
+// Import base theme first, then override
+@import '../../../../global_styling/mixins/index';
+
 @import 'button';
 @import 'panel';
 @import 'shadow';
