[Feature Branch] EuiSelectable accessibility (#3169)
Co-authored-by: Greg Thompson <thompson.glowe@gmail.com>
Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

--- a/src/components/selectable/selectable_list/_selectable_list.scss
+++ b/src/components/selectable/selectable_list/_selectable_list.scss
@@ -1,4 +1,10 @@
 // Expand height of list via flex box
+.euiSelectableList {
+  &:focus-within {
+    @include euiFocusRing;
+  }
+}
+
 .euiSelectableList-fullHeight {
   flex-grow: 1;
 }
