Fix EuiHorizontalSteps rendering over EuiHeader (#3707)
* Fix EuiHorizontalSteps rendering over EuiHeader

* changelog

--- a/src/components/steps/_steps_horizontal.scss
+++ b/src/components/steps/_steps_horizontal.scss
@@ -82,7 +82,7 @@
 
 .euiStepHorizontal__number {
   position: relative; /* 1 */
-  z-index: $euiZLevel1; /* 1 */
+  z-index: $euiZLevel0 + 1; /* 1 */
   transition: all $euiAnimSpeedFast ease-in-out;
 }
 
