--- a/src-docs/src/theme_dark.scss
+++ b/src-docs/src/theme_dark.scss
@@ -4,6 +4,7 @@
 
 @import '../../src/theme_dark';
 @import './components/guide_components';
+@import './services/playground/index';
 @import './views/suggest/global_filter_group';
 
 // Elastic charts
