--- a/src-docs/src/theme_light.scss
+++ b/src-docs/src/theme_light.scss
@@ -4,6 +4,7 @@
 
 @import '../../src/theme_light';
 @import './components/guide_components';
+@import './services/playground/index';
 @import './views/suggest/global_filter_group';
 
 // Elastic charts
