--- a/src/components/button/_index.scss
+++ b/src/components/button/_index.scss
@@ -1,4 +1,5 @@
 @import 'button';
+@import 'button_content';
 @import 'button_empty/index';
 @import 'button_icon/index';
 @import 'button_toggle/index';
