[EuiComboBox] Adding hit enter badge (#3782)
* Adding hit enter badge

* Adding CL

* Hit enter entity

* Update src/components/combo_box/combo_box_options_list/combo_box_options_list.tsx

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

* Addressing PR review

* Changing comp inside button to spans

* Adding returnKey icon. More improvements.

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

--- a/src/components/combo_box/combo_box_options_list/_combo_box_option.scss
+++ b/src/components/combo_box/combo_box_options_list/_combo_box_option.scss
@@ -28,8 +28,30 @@
   }
 }
 
+.euiComboBoxOption__contentWrapper {
+  display: flex;
+
+  .euiComboBoxOption__emptyStateText {
+    flex: 1;
+    text-align: left;
+    margin-bottom: 0;
+  }
+
+  .euiComboBoxOption__enterBadge {
+    align-self: flex-start;
+    margin-left: $euiSizeXS;
+
+    span {
+      display: flex;
+      align-items: center;
+    }
+  }
+}
+
 .euiComboBoxOption__content {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+  flex: 1;
+  text-align: left;
 }
