[EuiFieldPassword] Support toggling of obfuscation (#3751)
* [EuiFieldPassword] Support toggling obfuscation

- Added props `type` and `canToggleVisibility`

* Removed `canToggleVisibility` in favor of a third `type` called ‘dual’

* Put focus back into input after toggling visibility

* Back to using `Ref` instead of `RefCallback`

* Use new `useEuiI18n` method

* Quick non-related fix, remove `zindex` completely from popovers in datagrid example

Unnecessary to have a custom z-index as the default is much higher than the supplied one.

* Removing Edge's inernal reveal button when we're providing a custom one

* useCombinedRefs

* comment

* Using `/* */` comment format

* Whoops

* cl

Co-authored-by: Greg Thompson <thompson.glowe@gmail.com>

--- a/src/components/form/field_password/_field_password.scss
+++ b/src/components/form/field_password/_field_password.scss
@@ -7,3 +7,9 @@
     @include euiFormControlWithIcon($isIconOptional: false, $side: 'left', $compressed: true);
   }
 }
+
+// sass-lint:disable-block no-vendor-prefixes
+// Only remove Edge's inernal reveal button if we're providing a custom one
+.euiFieldPassword--withToggle::-ms-reveal {
+  display: none;
+}
