--- a/src/global_styling/mixins/_form.scss
+++ b/src/global_styling/mixins/_form.scss
@@ -68,8 +68,11 @@
 @mixin euiFormControlText {
   @include euiFont;
   font-size: $euiFontSizeS;
-  line-height: 1em; // fixes text alignment in IE
   color: $euiTextColor;
+
+  @include internetExplorerOnly {
+    line-height: 1em; // fixes text alignment in IE
+  }
 
   // sass-lint:disable-block mixins-before-declarations
   @include euiPlaceholderPerBrowser {
