[DataGrid] Add will-change to CSS to improve performance in chrome full screen mode (#3726)

--- a/src/components/datagrid/_data_grid.scss
+++ b/src/components/datagrid/_data_grid.scss
@@ -21,6 +21,10 @@
     background: $euiColorLightestShade;
     border-top: $euiBorderThin;
   }
+
+  .euiDataGrid__verticalScroll .euiDataGridRow {
+    will-change: transform;
+  }
 }
 
 .euiDataGrid__content {
