Changed margin-right to margin-left to fix container expansion issue (#3871)
* Changed margin-right to margin-left to fix container expansion issue

* Updated CHANGELOG.md

Co-authored-by: miukimiu <elizabet.oliveira@elastic.co>

--- a/src/components/facet/_facet_group.scss
+++ b/src/components/facet/_facet_group.scss
@@ -12,10 +12,10 @@
       $gutterAdjustment: $euiSizeM + $gutterSize;
 
       // Collapse margin on the right side of the group to allow it to extend the full width
-      margin-right: -#{$gutterAdjustment};
+      margin-left: -#{$gutterAdjustment};
 
       .euiFacetButton {
-        margin-right: $gutterAdjustment;
+        margin-left: $gutterAdjustment;
         // Adjust the max-width so it fits within the alloted margin
         max-width: calc(100% - #{$gutterAdjustment});
       }
