Fix datagrid not fitting into containers (#3894)
* Fix datagrid not fitting into containers

* cl

--- a/src/components/datagrid/_data_grid.scss
+++ b/src/components/datagrid/_data_grid.scss
@@ -113,3 +113,7 @@
   padding: $euiSizeS;
   margin: -$euiSizeS; // Offset against the panel to make the scrollbar flush scrollbars
 }
+
+.euiDataGrid__focusWrap {
+  height: 100%;
+}
