Add isLoading and isLoadingMessage props to EuiAccordion (#3879)

--- a/src/components/accordion/_accordion.scss
+++ b/src/components/accordion/_accordion.scss
@@ -92,3 +92,13 @@ $paddingSizes: (
     height: auto;
   }
 }
+
+.euiAccordion__children-isLoading {
+  line-height: $euiLineHeight;
+  display: flex;
+  align-items: center;
+
+  .euiAccordion__spinner {
+    margin-right: $euiSizeXS;
+  }
+}
