EuiSelectableTemplateSitewide for Elastic's global search (#3800)
* [EuiSelectableListItem] Added `onFocusBadgeContent` prop for visible instructions
  * Fixing alignment of new li elements that used to be buttons
* First step towards custom option renders
* Added `searchableLabel` to EuiSelectableOption`
  * EuiHighlight as the span
  * Changing EuiSelectableItem’s `onFocusBadgeContent` to `onFocusBadge` To allow for altering the badge’s props as well as content
* Added ability to change empty messages directly on EuiSelectable to maintain id
* [EuiSelectableMessage] Added `bordered` prop
  * Updating some EuiSelectable docs and removing `<br>` from sitewide template
* [EuiBadge] Fix layout when only an icon is provided
  * Also fixes the implementation of the on focus badge for EuiComboBox and EuiSelectable
* Background color for EuiMark only in Amsterdam
* introduce EuiSelectableOption generic; use generic extension in EuiSelectableTemplateSitewideOption
* [EuiPopover] and [EuiSelectable] Fix some axe issues

--- a/src/components/selectable/selectable_message/_selectable_message.scss
+++ b/src/components/selectable/selectable_message/_selectable_message.scss
@@ -5,4 +5,14 @@
   padding: $euiSizeS;
   text-align: center;
   word-wrap: break-word; /* 1 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.euiSelectableMessage--bordered {
+  // Match border from selectable_list
+  overflow: hidden;
+  border: $euiBorderThin;
+  border-radius: $euiBorderRadius;
 }
