--- a/src/components/mark/_mark.scss
+++ b/src/components/mark/_mark.scss
@@ -1,4 +1,7 @@
 .euiMark {
-  margin: $euiSizeXS;
-  padding: $euiSizeXS;
+  background-color: transparent;
+  font-weight: $euiFontWeightBold;
+  // Override the browser's black color.
+  // Can't use `inherit` because the text to background color contrast may not be sufficient
+  color: $euiTextColor;
 }
