--- a/src/components/selectable/selectable_list/_selectable_list_item.scss
+++ b/src/components/selectable/selectable_list/_selectable_list_item.scss
@@ -1,7 +1,6 @@
 .euiSelectableListItem {
   @include euiFontSizeS;
-  padding: $euiSelectableListItemPadding;
-  display: block; // Necessary to make sure it doesn't force the whole popover to be too wide
+  display: inline-flex; // Necessary to make sure it doesn't force the whole popover to be too wide
   width: 100%;
   text-align: left;
   color: $euiTextColor;
@@ -28,6 +27,8 @@
 }
 
 .euiSelectableListItem__content {
+  padding: $euiSelectableListItemPadding;
+  width: 100%;
   display: flex;
   align-items: center;
 }
@@ -35,13 +36,15 @@
 .euiSelectableListItem__icon,
 .euiSelectableListItem__prepend {
   margin-right: $euiSizeM;
+  flex-shrink: 0;
 }
 
 .euiSelectableListItem__append {
   margin-left: $euiSizeM;
+  flex-shrink: 0;
 }
 
 .euiSelectableListItem__text {
   @include euiTextTruncate;
-  flex-grow: 1; // Pushed appended content to the far right
+  flex-grow: 1; // Pushes appended content to the far right
 }
