--- a/src/components/table/_table.scss
+++ b/src/components/table/_table.scss
@@ -226,8 +226,12 @@
     max-height: 0;
   }
 
+  99% {
+    max-height: 100vh;
+  }
+
   100% {
-    max-height: 1000px;
+    max-height: unset;
   }
 }
 
