Add vertical scroll and text highlighting for functions (#3918)
* Add vertical scroll and text highlighting for functions

* use code block instead of markdown

* Swap usages of code for code block and fix overflow

* One codeblock with line breaks when multiple functions

* Fixed warnings of missing keys

Co-authored-by: cchaos <caroline.horn@elastic.co>

--- a/src-docs/src/components/guide_section/_guide_section.scss
+++ b/src-docs/src/components/guide_section/_guide_section.scss
@@ -7,3 +7,8 @@
 .guideSection__space {
   height: $euiSizeL;
 }
+
+.guideSection__tableCodeBlock {
+  padding-left: $euiSizeXS;
+  padding-right: $euiSizeXS;
+}
