--- a/src/components/progress/_progress.scss
+++ b/src/components/progress/_progress.scss
@@ -120,7 +120,7 @@ $euiProgressColors: (
 
   .euiProgress__data--#{$name} {
     .euiProgress__valueText {
-      color: $color;
+      color: makeHighContrastColor($color);
     }
   }
 }
@@ -138,29 +138,37 @@ $euiProgressColors: (
 .euiProgress__data {
   display: flex;
   justify-content: space-between;
-
-  .euiProgress__label {
-    @include euiTextTruncate;
-    flex-basis: 80%;
-    flex-grow: 1;
-  }
-
-  .euiProgress__valueText {
-    @include euiTextTruncate;
-    margin-left: auto;
-  }
 }
 
 .euiProgress__label,
 .euiProgress__valueText {
   @include euiText;
-  @include euiFontSize;
-  @include fontSize($euiFontSizeXS);
+  @include euiFontSizeXS;
+  @include euiTextTruncate;
+}
+
+.euiProgress__label {
+  flex-grow: 1;
+
+  // Only restrict the valueText if it's the sibling of the label
+  // Gives width precedence to the value text forcing consumers to round their values
+  + .euiProgress__valueText {
+    padding-left: $euiSizeXS;
+    flex-grow: 1;
+    text-align: right;
+    flex-shrink: 0;
+  }
+}
+
+.euiProgress__valueText {
+  // Tabular numbers ensure the line up nicely when right-aligned
+  font-feature-settings: 'tnum' 1;
+  margin-left: auto;
 }
 
 .euiProgress__data--l {
   .euiProgress__label,
   .euiProgress__valueText {
-    @include fontSize($euiFontSizeS);
+    @include euiFontSizeS;
   }
 }
