Add padding to EuiSearchField if isClearable is true (#3936)
* Add right side padding for field search on isClearable

* Update snapshots

* Addec cl

* Update CHANGELOG.md

Co-authored-by: Andrea Del Rio <delrio.andre@gmail.com>

Co-authored-by: Andrea Del Rio <delrio.andre@gmail.com>

--- a/src/components/form/field_search/_field_search.scss
+++ b/src/components/form/field_search/_field_search.scss
@@ -24,4 +24,8 @@
   &.euiFieldSearch--compressed {
     @include euiFormControlWithIcon($isIconOptional: false, $side: 'left', $compressed: true);
   }
+
+  &.euiFieldSearch-isClearable {
+    @include euiFormControlLayoutPadding(1)
+  }
 }
