[WIP][rtl][css] Fix button margins for RTL langs (#3974)
When showing a button in RTL, margin-left/right shows up incorrectly. The needed CSS seems to be `margin-inline-start/end`.  Partially relates to #3960 

Those values do not exist in IE.  I tested these changes with a search bar's filters and `EuiHeaderLink` with icons.

english | current RTL | desired RTL 
---|---|---
![image](https://user-images.githubusercontent.com/1641515/91629484-7629b600-e997-11ea-8a29-85a7871443d4.png) | ![image](https://user-images.githubusercontent.com/1641515/91629493-95c0de80-e997-11ea-92ed-68c6af62c4c3.png) | ![image](https://user-images.githubusercontent.com/1641515/91629489-8b9ee000-e997-11ea-87c7-367749d876e2.png)


Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

--- a/src/global_styling/mixins/_button.scss
+++ b/src/global_styling/mixins/_button.scss
@@ -72,8 +72,8 @@
     flex-direction: row-reverse;
 
     > * + * {
-      margin-left: 0; // 1, 2
-      margin-right: $euiSizeS; // 1, 2
+      margin-inline-start: 0; // 1, 2
+      margin-inline-end: $euiSizeS; // 1, 2
     }
   } @else {
     display: flex;
@@ -81,7 +81,7 @@
     align-items: center;
 
     > * + * {
-      margin-left: $euiSizeS; // 1
+      margin-inline-start: $euiSizeS; // 1
     }
   }
 }
